<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.custom.WordsCustomFragment">

    <com.google.android.material.chip.Chip
        android:id="@+id/custom_select_words_chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/select_words"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/custom_words_lattice_pad_card"
        style="@style/Widget.SR.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_select_words_chip">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.jimzjy.speechrehabilitation.common.widget.LatticePad
                android:id="@+id/custom_words_lattice_pad"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:0.9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/custom_words_lattice_back"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/vector_back"
        android:background="@drawable/ripple_grey"
        app:layout_constraintBottom_toBottomOf="@+id/custom_words_save_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/custom_words_save_bt" />

    <ImageView
        android:id="@+id/custom_words_lattice_clear"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/clear"
        android:padding="8dp"
        android:background="@drawable/ripple_grey"
        android:src="@drawable/vector_close"
        app:layout_constraintBottom_toBottomOf="@+id/custom_words_save_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/custom_words_save_bt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/custom_words_save_bt"
        style="@style/Widget.SR.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_words_lattice_pad_card" />

    <com.google.android.material.chip.Chip
        android:id="@+id/custom_words_lattice_mode_add"
        style="@style/Widget.SR.ChoiceChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/custom_words_lattice_mode_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_words_save_bt" />

    <com.google.android.material.chip.Chip
        android:id="@+id/custom_words_lattice_mode_remove"
        style="@style/Widget.SR.ChoiceChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/custom_words_lattice_mode_add"
        app:layout_constraintTop_toBottomOf="@+id/custom_words_save_bt" />
</androidx.constraintlayout.widget.ConstraintLayout>