<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.user.UserFragment">

        <com.google.android.material.chip.Chip
            android:id="@+id/user_history_hint_chip"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/history"
            android:textAlignment="center"
            android:clickable="false"
            android:textAppearance="@style/TextAppearance.SR.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_history_card"
            style="@style/Widget.SR.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_history_hint_chip">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <HorizontalScrollView
                    android:id="@+id/user_history_chip_sv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:checkedChip="@id/user_history_week_chip"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/user_history_week_chip"
                            style="@style/Widget.SR.ChoiceChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/week" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/user_history_month_chip"
                            style="@style/Widget.SR.ChoiceChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/month" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/user_history_fromRecording_chip"
                            style="@style/Widget.SR.ChoiceChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from_recording" />
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <com.jimzjy.speechrehabilitation.common.widget.LineChart
                    android:id="@+id/user_history_single_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_history_chip_sv" />

                <TextView
                    android:id="@+id/user_history_line_char_single_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/single_word_test"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_history_single_line_chart"
                    tools:layout_editor_absoluteY="35dp" />

                <com.jimzjy.speechrehabilitation.common.widget.LineChart
                    android:id="@+id/user_history_words_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_history_line_char_single_tv" />

                <TextView
                    android:id="@+id/user_history_line_char_words_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/words_test"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_history_words_line_chart" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_switch_bt"
            style="@style/Widget.SR.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/switch_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_history_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>